fix NPE on null argument passed